# ProjetoPT

./: .gitignore  README.md  app.py  db.py  pyproject.toml
controllers/: __init__.py  endereco_controller.py  usuario_controller.py
dao/: __init__.py  endereco_dao.py  usuario_dao.py
models/: __init__.py  endereco.py  usuario.py
modules/: db.py
modules/dao/: endereco_dao.py  usuario_dao.py
static/css/: app.css
static/js/: app.js
templates/: cadastro_de_usuario.html  edita_info_do_usuario.html  editar_info_do_usuario.html  informacoes_do_usuario_logado.html  inicio.html  loga_usuario.html  logar_usuario.html  mostra_menu_usuario.html  mostrar_menu_usuario.html  registra_usuario.html  registrar_usuario.html  template_geral.html  usuario_logado.html
testes/: __init__.py  endereco_test.py  usuario_test.py
