[tool.poetry]
name = "ProjetoPT"
version = "0.1.0"
description = ""
authors = ["AkimGomes <ak-gomes@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "2.0.2"
SQLAlchemy-Utils = "0.38.2"
PyMySQL = "1.0.2"
Flask-SQLAlchemy = "2.5.1"
cryptography = "36.0.1"
Flask-Login = "0.5.0"
SQLAlchemy = "1.3.24"
PyJWT = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
